@@ -501,10 +501,10 @@ trivial
   part of speech tag.
   
 external
-  Use some external tagger. The input "forms" can contain multiple tab-separated
-  values, first being the form, second the lemma and the rest is part of speech
-  tag. The part of speech tag is optional. The lemma is also optional and if
-  missing, the form itself is used as a lemma.
+  Use some external tagger. The input "forms" can contain multiple
+  space-separated values, first being the form, second the lemma and the rest is
+  part of speech tag. The part of speech tag is optional. The lemma is also
+  optional and if missing, the form itself is used as a lemma.
   
 morphodita:model
   Use MorphoDiTa (http://ufal.mff.cuni.cz/morphodita) as a tagger with the
