@@ -686,7 +686,7 @@ NameTag can utilize several taggers to obtain the tags and lemmas:
   no part of speech tag.
 <P></P>
 <DT><CODE>external</CODE></DT><DD>
-  Use some external tagger. The input "forms" can contain multiple tab-separated values,
+  Use some external tagger. The input "forms" can contain multiple space-separated values,
   first being the <I>form</I>, second the <I>lemma</I> and the rest is <I>part of speech tag</I>.
   The part of speech tag is optional. The lemma is also optional and if missing, the form
   itself is used as a lemma.
